--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,10 @@
   }
   
   body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
     margin: 0;
+    padding: 0;
     display: flex;
     min-width: 320px;
     min-height: 100vh;
@@ -38,6 +41,8 @@
   h1 {
     font-size: 3.2em;
     line-height: 1.1;
+    text-align: center;
+    margin-bottom: 20px;
   }
   
   button {
@@ -63,38 +68,6 @@
     outline: 4px auto -webkit-focus-ring-color;
   }
   
-  /* @media (prefers-color-scheme: light) {
-      :root {
-        color: #213547;
-        background-color: #ffffff;
-      }
-    
-      a:hover {
-        color: #747bff;
-      }
-    
-      button {
-        background-color: #f9f9f9;
-      }
-    }
-     */
-  body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
   
   input[type="text"] {
     width: 100%;
@@ -104,11 +77,10 @@
   }
   
   .flex {
-    min-width: 600px;
+    min-width: 20%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    /* align-content: center; */
     justify-content: center;
     align-items: center;
   
@@ -142,18 +114,4 @@
     margin: 30px;
   }
   
-  .app-container {
-    text-align: center;
-    padding: 20px;
-  }
   
-  h1 {
-    margin-bottom: 20px;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
